@@ -433,23 +433,25 @@ BEGIN
     LTEXT           "&Language:",IDC_STATIC,14,20,86,8
     COMBOBOX        IDC_LANGUAGECOMBO,108,18,176,64,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Exclude/Ignore pattern:",IDC_STATIC,14,103,84,18,
-                    SS_CENTERIMAGE
-    EDITTEXT        IDC_TEMPEXTENSIONS,108,105,176,14,ES_AUTOHSCROLL
-    LTEXT           "Subversion configuration file:",IDC_STATIC,14,150,192,8
-    PUSHBUTTON      "&Edit",IDC_EDITCONFIG,212,145,72,14
-    PUSHBUTTON      "Clear &Now",IDC_CLEARAUTH,212,171,72,14
     CONTROL         "Automatically check for newer versions every week",
                     IDC_CHECKNEWERVERSION,"Button",BS_AUTOCHECKBOX | 
                     BS_VCENTER | BS_MULTILINE | WS_TABSTOP,11,34,195,26
     PUSHBUTTON      "&Check Now",IDC_CHECKNEWERBUTTON,212,38,72,14
-    GROUPBOX        "Subversion",IDC_STATIC,7,92,286,118
+    LTEXT           "System Sounds",IDC_STATIC,14,62,192,8
+    PUSHBUTTON      "Configure",IDC_SOUNDS,212,59,72,14
+    LTEXT           "Exclude/Ignore pattern:",IDC_STATIC,14,103,84,18,
+                    SS_CENTERIMAGE
+    EDITTEXT        IDC_TEMPEXTENSIONS,108,105,176,14,ES_AUTOHSCROLL
     CONTROL         "Set filedates to the ""last commit time""",
                     IDC_COMMITFILETIMES,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,14,127,270,10
-    GROUPBOX        "TortoiseSVN",IDC_STATIC,7,7,286,61
+    LTEXT           "Subversion configuration file:",IDC_STATIC,14,150,192,8
+    PUSHBUTTON      "&Edit",IDC_EDITCONFIG,212,145,72,14
     LTEXT           "Subversion authentication data:",IDC_STATIC,14,174,192,
                     8
+    PUSHBUTTON      "Clear &Now",IDC_CLEARAUTH,212,171,72,14
+    GROUPBOX        "TortoiseSVN",IDC_STATIC,7,7,286,76
+    GROUPBOX        "Subversion",IDC_STATIC,7,92,286,118
 END
 
 IDD_SETTINGSOVERLAY DIALOGEX 0, 0, 300, 217
